kube/02-cube-refresh-worker-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  labels:
#    service: cube-refresh-worker
#  name: cube-refresh-worker
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      service: cube-refresh-worker
#  strategy:
#    type: Recreate
#  template:
#    metadata:
#      labels:
#        service: cube-refresh-worker
#    spec:
#      containers:
#        - env: # Refer to https://cube.dev/docs/reference/environment-variables for more options
#            - name: CUBEJS_API_SECRET
#              value: secret
#            - name: CUBEJS_CUBESTORE_HOST
#              value: "cubestore-router" 
#            - name: CUBEJS_DEV_MODE
#              value: "true" 
#            - name: CUBEJS_EXTERNAL_DEFAULT
#              value: "true"
#            - name: CUBEJS_REDIS_URL
#              value: redis://redis:6379 
#            - name: CUBEJS_DB_HOST
#              value: database-1.cmm94db5jykx.us-east-1.rds.amazonaws.com
#            - name: CUBEJS_DB_NAME
#              value: employee
#            - name: CUBEJS_DB_USER
#              value: admin
#            - name: CUBEJS_DB_PASS
#              value: admin123
#            - name: CUBEJS_DB_TYPE
#              value: mysql
#            - name: CUBEJS_REFRESH_WORKER
#              value: "true"
#          image: cubejs/cube:v0.28.14
#          name: cube-refresh-worker
#          resources: {}
#          volumeMounts:
#            - mountPath: /cube/conf/schema
#              name: cube-api-schema
#      restartPolicy: Always
#      volumes:
#        - name: cube-api-schema
#          configMap:
#            name: cube-api-schema
#status: {}
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: cube-refresh-worker
  name: cube-refresh-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cube-refresh-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: cube-refresh-worker
    spec:
      containers:
        - env: # Refer to https://cube.dev/docs/reference/environment-variables for more options
            - name: CUBEJS_API_SECRET
              value: secret
            - name: CUBEJS_CUBESTORE_HOST
              value: "cubestore-router" 
            - name: CUBEJS_DEV_MODE
              value: "true" 
            - name: CUBEJS_EXTERNAL_DEFAULT
              value: "true"
            - name: CUBEJS_REDIS_URL
              value: redis://redis:6379 
            - name: CUBEJS_DB_HOST
              value: cube-js.cmm94db5jykx.us-east-1.rds.amazonaws.com
            - name: CUBEJS_DB_NAME
              value: employee
            - name: CUBEJS_DB_USER
              value: admin
            - name: CUBEJS_DB_PASS
              value: admin123
            - name: CUBEJS_DB_TYPE
              value: mysql
            - name: CUBEJS_REFRESH_WORKER
              value: "true"
          image: cubejs/cube:v0.28.14
          name: cube-refresh-worker
          resources: {}
      restartPolicy: Always
status: {}
