kube/07-ingress.yaml
# Ingress Resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cube-api
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: cube.atgeirsolutions.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cube-api
            port:
              number: 4000
